--- a/share/ufw-gtk.glade
+++ b/share/ufw-gtk.glade
@@ -148,8 +148,8 @@
                     <child>
                       <object class="GtkImageMenuItem" id="imagemenuitem1">
                         <property name="visible">True</property>
-                        <property name="related_action">rules_import</property>
                         <property name="use_action_appearance">True</property>
+                        <property name="related_action">rules_import</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                       </object>
@@ -157,8 +157,8 @@
                     <child>
                       <object class="GtkImageMenuItem" id="imagemenuitem2">
                         <property name="visible">True</property>
-                        <property name="related_action">rules_export</property>
                         <property name="use_action_appearance">True</property>
+                        <property name="related_action">rules_export</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                       </object>
@@ -171,8 +171,8 @@
                     <child>
                       <object class="GtkImageMenuItem" id="imagemenuitem3">
                         <property name="visible">True</property>
-                        <property name="related_action">quit</property>
                         <property name="use_action_appearance">True</property>
+                        <property name="related_action">quit</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                         <accelerator key="q" signal="activate" modifiers="GDK_CONTROL_MASK"/>
@@ -201,8 +201,8 @@
                             <child>
                               <object class="GtkImageMenuItem" id="imagemenuitem6">
                                 <property name="visible">True</property>
-                                <property name="related_action">firewall_toggle</property>
                                 <property name="use_action_appearance">True</property>
+                                <property name="related_action">firewall_toggle</property>
                                 <property name="use_underline">True</property>
                                 <property name="use_stock">True</property>
                                 <accelerator key="t" signal="activate" modifiers="GDK_CONTROL_MASK"/>
@@ -211,8 +211,8 @@
                             <child>
                               <object class="GtkImageMenuItem" id="imagemenuitem7">
                                 <property name="visible">True</property>
-                                <property name="related_action">firewall_reload</property>
                                 <property name="use_action_appearance">True</property>
+                                <property name="related_action">firewall_reload</property>
                                 <property name="use_underline">True</property>
                                 <property name="use_stock">True</property>
                                 <accelerator key="r" signal="activate" modifiers="GDK_CONTROL_MASK"/>
@@ -226,8 +226,8 @@
                             <child>
                               <object class="GtkImageMenuItem" id="imagemenuitem8">
                                 <property name="visible">True</property>
-                                <property name="related_action">firewall_update</property>
                                 <property name="use_action_appearance">True</property>
+                                <property name="related_action">firewall_update</property>
                                 <property name="use_underline">True</property>
                                 <property name="use_stock">True</property>
                                 <accelerator key="u" signal="activate" modifiers="GDK_CONTROL_MASK"/>
@@ -236,8 +236,8 @@
                             <child>
                               <object class="GtkImageMenuItem" id="imagemenuitem9">
                                 <property name="visible">True</property>
-                                <property name="related_action">firewall_reset</property>
                                 <property name="use_action_appearance">True</property>
+                                <property name="related_action">firewall_reset</property>
                                 <property name="use_underline">True</property>
                                 <property name="use_stock">True</property>
                               </object>
@@ -257,8 +257,8 @@
                             <child>
                               <object class="GtkImageMenuItem" id="imagemenuitem12">
                                 <property name="visible">True</property>
-                                <property name="related_action">rule_add</property>
                                 <property name="use_action_appearance">True</property>
+                                <property name="related_action">rule_add</property>
                                 <property name="use_underline">True</property>
                                 <property name="use_stock">True</property>
                                 <accelerator key="i" signal="activate" modifiers="GDK_CONTROL_MASK"/>
@@ -267,8 +267,8 @@
                             <child>
                               <object class="GtkImageMenuItem" id="imagemenuitem13">
                                 <property name="visible">True</property>
-                                <property name="related_action">rule_edit</property>
                                 <property name="use_action_appearance">True</property>
+                                <property name="related_action">rule_edit</property>
                                 <property name="use_underline">True</property>
                                 <property name="use_stock">True</property>
                                 <accelerator key="e" signal="activate" modifiers="GDK_CONTROL_MASK"/>
@@ -277,8 +277,8 @@
                             <child>
                               <object class="GtkImageMenuItem" id="imagemenuitem14">
                                 <property name="visible">True</property>
-                                <property name="related_action">rule_delete</property>
                                 <property name="use_action_appearance">True</property>
+                                <property name="related_action">rule_delete</property>
                                 <property name="use_underline">True</property>
                                 <property name="use_stock">True</property>
                                 <accelerator key="Delete" signal="activate"/>
@@ -292,8 +292,8 @@
                             <child>
                               <object class="GtkImageMenuItem" id="imagemenuitem15">
                                 <property name="visible">True</property>
-                                <property name="related_action">rule_up</property>
                                 <property name="use_action_appearance">True</property>
+                                <property name="related_action">rule_up</property>
                                 <property name="use_underline">True</property>
                                 <property name="use_stock">True</property>
                                 <accelerator key="Up" signal="activate" modifiers="GDK_SHIFT_MASK"/>
@@ -302,8 +302,8 @@
                             <child>
                               <object class="GtkImageMenuItem" id="imagemenuitem16">
                                 <property name="visible">True</property>
-                                <property name="related_action">rule_down</property>
                                 <property name="use_action_appearance">True</property>
+                                <property name="related_action">rule_down</property>
                                 <property name="use_underline">True</property>
                                 <property name="use_stock">True</property>
                                 <accelerator key="Down" signal="activate" modifiers="GDK_SHIFT_MASK"/>
@@ -321,8 +321,8 @@
                     <child>
                       <object class="GtkImageMenuItem" id="imagemenuitem11">
                         <property name="visible">True</property>
-                        <property name="related_action">prefs_dialog_show</property>
                         <property name="use_action_appearance">True</property>
+                        <property name="related_action">prefs_dialog_show</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                         <accelerator key="p" signal="activate" modifiers="GDK_CONTROL_MASK"/>
@@ -343,8 +343,8 @@
                     <child>
                       <object class="GtkImageMenuItem" id="imagemenuitem10">
                         <property name="visible">True</property>
-                        <property name="related_action">about_dialog_show</property>
                         <property name="use_action_appearance">True</property>
+                        <property name="related_action">about_dialog_show</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                       </object>
@@ -366,8 +366,8 @@
             <child>
               <object class="GtkToggleToolButton" id="toolbutton1">
                 <property name="visible">True</property>
-                <property name="related_action">firewall_toggle</property>
                 <property name="use_action_appearance">True</property>
+                <property name="related_action">firewall_toggle</property>
                 <property name="label" translatable="yes">toolbutton1</property>
                 <property name="use_underline">True</property>
               </object>
@@ -379,8 +379,8 @@
             <child>
               <object class="GtkToolButton" id="toolbutton2">
                 <property name="visible">True</property>
-                <property name="related_action">firewall_reload</property>
                 <property name="use_action_appearance">True</property>
+                <property name="related_action">firewall_reload</property>
                 <property name="label" translatable="yes">toolbutton2</property>
                 <property name="use_underline">True</property>
               </object>
@@ -400,8 +400,8 @@
             <child>
               <object class="GtkToolButton" id="toolbutton3">
                 <property name="visible">True</property>
-                <property name="related_action">rule_delete</property>
                 <property name="use_action_appearance">True</property>
+                <property name="related_action">rule_delete</property>
                 <property name="label" translatable="yes">toolbutton3</property>
                 <property name="use_underline">True</property>
               </object>
@@ -413,8 +413,8 @@
             <child>
               <object class="GtkToolButton" id="toolbutton4">
                 <property name="visible">True</property>
-                <property name="related_action">rule_edit</property>
                 <property name="use_action_appearance">True</property>
+                <property name="related_action">rule_edit</property>
                 <property name="label" translatable="yes">toolbutton4</property>
                 <property name="use_underline">True</property>
               </object>
@@ -426,8 +426,8 @@
             <child>
               <object class="GtkToolButton" id="toolbutton5">
                 <property name="visible">True</property>
-                <property name="related_action">rule_add</property>
                 <property name="use_action_appearance">True</property>
+                <property name="related_action">rule_add</property>
                 <property name="label" translatable="yes">toolbutton5</property>
                 <property name="use_underline">True</property>
               </object>
@@ -447,8 +447,8 @@
             <child>
               <object class="GtkToolButton" id="toolbutton6">
                 <property name="visible">True</property>
-                <property name="related_action">rule_down</property>
                 <property name="use_action_appearance">True</property>
+                <property name="related_action">rule_down</property>
                 <property name="label" translatable="yes">toolbutton6</property>
                 <property name="use_underline">True</property>
               </object>
@@ -460,8 +460,8 @@
             <child>
               <object class="GtkToolButton" id="toolbutton7">
                 <property name="visible">True</property>
-                <property name="related_action">rule_up</property>
                 <property name="use_action_appearance">True</property>
+                <property name="related_action">rule_up</property>
                 <property name="label" translatable="yes">toolbutton7</property>
                 <property name="use_underline">True</property>
               </object>
@@ -1806,11 +1806,13 @@
   <object class="GtkAction" id="rules_export">
     <property name="label">Export Rules</property>
     <property name="stock_id">gtk-save-as</property>
+    <property name="sensitive">False</property>
     <signal name="activate" handler="on_rules_export_activate"/>
   </object>
   <object class="GtkAction" id="rules_import">
     <property name="label">Import Rules</property>
     <property name="stock_id">gtk-open</property>
+    <property name="sensitive">False</property>
     <signal name="activate" handler="on_rules_import_activate"/>
   </object>
   <object class="GtkAdjustment" id="position_adjustment">
