--- a/share/ufw-gtk.glade
+++ b/share/ufw-gtk.glade
@@ -416,8 +416,8 @@
             <child>
               <object class="GtkToggleToolButton" id="toolbutton1">
                 <property name="visible">True</property>
-                <property name="related_action">firewall_toggle</property>
                 <property name="use_action_appearance">True</property>
+                <property name="related_action">firewall_toggle</property>
                 <property name="label" translatable="yes">toolbutton1</property>
                 <property name="use_underline">True</property>
               </object>
@@ -429,8 +429,8 @@
             <child>
               <object class="GtkToolButton" id="toolbutton2">
                 <property name="visible">True</property>
-                <property name="related_action">firewall_reload</property>
                 <property name="use_action_appearance">True</property>
+                <property name="related_action">firewall_reload</property>
                 <property name="label" translatable="yes">toolbutton2</property>
                 <property name="use_underline">True</property>
               </object>
@@ -450,8 +450,8 @@
             <child>
               <object class="GtkToolButton" id="toolbutton3">
                 <property name="visible">True</property>
-                <property name="related_action">rule_delete</property>
                 <property name="use_action_appearance">True</property>
+                <property name="related_action">rule_delete</property>
                 <property name="label" translatable="yes">toolbutton3</property>
                 <property name="use_underline">True</property>
               </object>
@@ -463,8 +463,8 @@
             <child>
               <object class="GtkToolButton" id="toolbutton4">
                 <property name="visible">True</property>
-                <property name="related_action">rule_edit</property>
                 <property name="use_action_appearance">True</property>
+                <property name="related_action">rule_edit</property>
                 <property name="label" translatable="yes">toolbutton4</property>
                 <property name="use_underline">True</property>
               </object>
@@ -476,8 +476,8 @@
             <child>
               <object class="GtkToolButton" id="toolbutton5">
                 <property name="visible">True</property>
-                <property name="related_action">rule_add</property>
                 <property name="use_action_appearance">True</property>
+                <property name="related_action">rule_add</property>
                 <property name="label" translatable="yes">toolbutton5</property>
                 <property name="use_underline">True</property>
               </object>
@@ -497,8 +497,8 @@
             <child>
               <object class="GtkToolButton" id="toolbutton6">
                 <property name="visible">True</property>
-                <property name="related_action">rule_down</property>
                 <property name="use_action_appearance">True</property>
+                <property name="related_action">rule_down</property>
                 <property name="label" translatable="yes">toolbutton6</property>
                 <property name="use_underline">True</property>
               </object>
@@ -510,8 +510,8 @@
             <child>
               <object class="GtkToolButton" id="toolbutton7">
                 <property name="visible">True</property>
-                <property name="related_action">rule_up</property>
                 <property name="use_action_appearance">True</property>
+                <property name="related_action">rule_up</property>
                 <property name="label" translatable="yes">toolbutton7</property>
                 <property name="use_underline">True</property>
               </object>
@@ -1606,8 +1606,17 @@
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see &lt;http://www.gnu.org/licenses/&gt;.</property>
     <property name="authors">Darwin M. Bautista &lt;djclue917@gmail.com&gt;</property>
-    <property name="artists">Soft Icons by Asher (http://kyo-tux.deviantart.com/)</property>
-    <property name="logo">icon.png</property>
+    <property name="artists">icon.png:
+	Copied from: Soft Icons
+	Artist:  Asher
+	URL: http://kyo-tux.deviantart.com/art/Soft-Icons-83196570
+	License: Creative Commons Attribution-NonCommercial-ShareAlike 3.0
+
+logo.png:
+	Derived from: icon.png
+	Artist: Darwin M. Bautista
+	License: same as original</property>
+    <property name="logo">logo.png</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox2">
         <property name="visible">True</property>
